use records where applicable